# ai_code_assistant

./: .gitignore  README.md  docker-compose.yml  package.json  tickets.db  tsconfig.json
configs/: opencode.json  pi_models.json
configs/continue/: config.yaml
configs/opencode/: opencode.json
configs/pi/: models.json  (+1 more)
data/: data.sql  tickets.puml
docker-llama-cpp-app/: .gitignore  README.md  TODO.txt  docker-compose.yml  opencode.json  package.json
docker-model-runner-app/: .gitignore  README.md  docker-compose.yml
docker-ollama-app/: docker-compose.yml
docker-vllm-app/: .env  .gitignore  README.md  docker-compose.yml  opencode.json
models_cache/: chat_template-v19.jinja
oauth2-proxy-app/: .env.example  .gitignore  .pre-commit-config.yaml  AI.md  AUTHENTICATION.md  CHANGES.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PASSWORD_CHANGE_NOTES.md  README.md  RELEASE_1.0.3_SUMMARY.md  SECURITY_UPDATES.md  docker-compose.yml  main.py  pyproject.toml
oauth2-proxy-app/ai_app/: auth.py  auth_deprecated.py  auth_old.py  auth_v2.py  proxy.py  settings.py
oauth2-proxy-app/ai_app/routers/: __init__.py  auth.py
oauth2-proxy-app/ai_app/scripts/: setup_users.py  users.json
oauth2-proxy-app/scripts/: check-types.sh  curl_check_admin_role.sh  curl_check_view_role.sh  format-check.sh
oauth2-proxy-app/tests/: __init__.py  conftest.py  pytest.ini  test_auth_v2.py  test_proxy.py
oauth2-proxy-app/tests/test_routers/: test_auth.py
src/: databaseManager.ts  setupDatabase.ts  startDatabase.ts
tic-tac-toe-app/: package-lock.json  package.json
(+17 files in other folders)
